# AliceO2

./: CMakeLists.txt
Common/MathUtils/include/MathUtils/: Utils.h
Detectors/ITSMFT/ITS/tracking/: CMakeLists.txt
Detectors/ITSMFT/ITS/tracking/cuda/: CMakeLists.txt
Detectors/ITSMFT/MFT/base/: CMakeLists.txt
Detectors/MUON/MID/: CMakeLists.txt
Detectors/MUON/MID/Base/: CMakeLists.txt
Detectors/MUON/MID/Clustering/: CMakeLists.txt
Detectors/MUON/MID/Simulation/: CMakeLists.txt
Detectors/MUON/MID/Simulation/test/: CMakeLists.txt
Detectors/MUON/MID/TestingSimTools/: CMakeLists.txt
Detectors/MUON/MID/Tracking/: CMakeLists.txt
Detectors/TRD/base/: CMakeLists.txt
Framework/: CMakeLists.txt
Framework/Core/: CMakeLists.txt
Framework/DebugGUI/: CMakeLists.txt
Framework/Logger/: CMakeLists.txt
GPU/: CMakeLists.txt
GPU/Common/: CMakeLists.txt  GPUDefGPUParameters.h
GPU/GPUTracking/: CMakeLists.txt
GPU/GPUTracking/Base/: GPUKernelDebugOutput.h
GPU/GPUTracking/Base/cuda/: CMakeLists.txt
GPU/GPUTracking/Base/hip/: CMakeLists.txt  GPUReconstructionHIP.hip.cxx
GPU/GPUTracking/Base/opencl/: CMakeLists.txt
GPU/GPUTracking/Base/opencl-common/: GPUReconstructionOCL.cl
GPU/GPUTracking/Merger/: GPUTPCGMMerger.cxx  GPUTPCGMMergerGPU.cxx  GPUTPCGMTrackParam.cxx
GPU/GPUTracking/Standalone/: CMakeLists.txt
GPU/GPUTracking/Standalone/display/: GPUDisplayExt.h
GPU/GPUTracking/gpucf/cl/: clusterFinderDefs.h
GPU/TPCFastTransformation/: CMakeLists.txt
GPU/TPCSpaceChargeBase/: CMakeLists.txt
GPU/cmake/: FindGPU.cmake
dependencies/: CMakeLists.txt
