add_subdirectory(Base)
add_subdirectory(Clustering)
add_subdirectory(Simulation)
add_subdirectory(TestingSimTools)
add_subdirectory(Tracking)

if(BUILD_TESTING)
  add_subdirectory(Base/test)
  add_subdirectory(Clustering/test)
  add_subdirectory(Tracking/test)
  add_subdirectory(Simulation/test)
endif()
